--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-netlify": "^1.0.0"
+	}
 }
